Start redesigning of action execution